--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,7 +9,7 @@
           
         <input type="text" class="form-control input-lg" placeholder="Street address, City, Zip">
       </div> -->
-      <button type="submit" [routerLink]="['/restuarant']" class="btn btn-success btn-lg">Find Food</button>
+      <button type="submit" [routerLink]="['/restuarant']" class="btn btn-success btn-lg">Find Restaurants</button>
     </form>
 	
    <!-- <span class="border">SCROLL DOWN</span>-->
